Fix for bug #1014 In IpoCurve.addBezier() method, set handles of newly added point to type Auto.

Fix provided by Roland Hess (harkyman).